# arrus

./: CLAUDE.md  Cargo.toml  README.md  arrus.service
.claude/agents/: code-refactoring-specialist.md
.github/workflows/: release.yml
plans/: 00-introduction.md  01-bridge-server.md  02-rpc-server.md  03-websocket-transport.md  04-ipc-transport.md  05-process-detection.md  06-database-management.md  07-future-improvements.md
src/: activity.rs  bridge.rs  config.rs  connection_manager.rs  database.rs  detector.rs  error.rs  logger.rs  main.rs  server.rs
src/activity/: types.rs
src/database/: http_client.rs
src/db/: error.rs  file_manager.rs  http_client.rs  manager.rs  mod.rs  scheduler.rs  validator.rs
src/detector/: activity_manager.rs  path_processor.rs  scanner.rs
src/process/: activity_manager.rs  database.rs  detector.rs  error.rs  mod.rs  path_processor.rs  scanner.rs
src/server/: handlers.rs  protocol.rs  types.rs
src/transports/: ipc.rs  mod.rs  websocket.rs
