[package]
name = "arrus"
version = "0.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
kitchen-sink = { git = "https://github.com/dfontana/kitchen-sink.git", tag = "0.1.2" }
reqwest = { version = "0.12", features = ["json"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["fmt"] }
